tests/regression/error/hw5_error19.correct
variable 'a' was previously declared
